# 7495-Final

./: CMakeLists.txt  README.md
data/tripod_3/: kinect_1077.pcd
data/work_2/: kinect_13.pcd
src/: active.cpp  grow.cpp  segment.cpp  segmentation.cpp
